<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Al7ezp Ala3zam</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="introduction">Introduction</string>
    <string name="saturday">saturday</string>
    <string name="sunday">sunday</string>
    <string name="monday">monday</string>
    <string name="tuesday">tuesday</string>
    <string name="wednesday">wednesday</string>
    <string name="thursday">thursday</string>
    <string name="friday">friday</string>
    <string name="important_references"> important references</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="no_alarm_set">No Reminder set</string>
    <string name="open_time_picker">open time picker</string>
    <string name="cancel_alarm">cancel Reminder</string>
    <string name="logo">logo</string>
    <string name="Reminder_Set_For">Reminder Set For</string>
    <string name="Reminder_Canceled">Reminder Canceled</string>
    <string name="exit">Exit</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="Do_you_want_to_exit">Do you want to exit ?</string>
    <string name="settings">Settings</string>


</resources>
