<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbars="vertical"
    android:background="#ece5d5"
    android:fadeScrollbars="false">

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.PdfBook">


    <Button
        android:id="@+id/btn_intro"
        style="@style/Button"
        android:text="@string/introduction"
        android:textColor="#fff"
        android:textSize="@dimen/_10sdp"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        />
    <Button
        android:id="@+id/btn_Saturday"
        style="@style/Button"
        android:text="@string/saturday"
        android:textColor="#fff"
        android:textSize="@dimen/_10sdp"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_intro"
        android:layout_marginTop="@dimen/_10sdp"
        />
    <Button
        android:id="@+id/btn_Sunday"
        style="@style/Button"
        android:text="@string/sunday"
        android:textColor="#fff"
        android:textSize="@dimen/_10sdp"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_Saturday"
        android:layout_marginTop="@dimen/_10sdp"
        />
    <Button
        android:id="@+id/btn_Monday"
        style="@style/Button"
        android:text="@string/monday"
        android:textColor="#fff"
        android:textSize="@dimen/_10sdp"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_Sunday"
        android:layout_marginTop="@dimen/_10sdp"
        />
    <Button
        android:id="@+id/btn_Tuesday"
        style="@style/Button"
        android:text="@string/tuesday"
        android:textColor="#fff"
        android:textSize="@dimen/_10sdp"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_Monday"
        android:layout_marginTop="@dimen/_10sdp"
        />
    <Button
        android:id="@+id/btn_Wednesday"
        style="@style/Button"
        android:text="@string/wednesday"
        android:textColor="#fff"
        android:textSize="@dimen/_10sdp"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_Tuesday"
        android:layout_marginTop="@dimen/_10sdp"
        />
    <Button
        android:id="@+id/btn_Thursday"
        style="@style/Button"
        android:text="@string/thursday"
        android:textColor="#fff"
        android:textSize="@dimen/_10sdp"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_Wednesday"
        android:layout_marginTop="@dimen/_10sdp"
        />
    <Button
        android:id="@+id/btn_Friday"
        style="@style/Button"
        android:text="@string/friday"
        android:textColor="#fff"
        android:textSize="@dimen/_10sdp"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_Thursday"
        android:layout_marginTop="@dimen/_10sdp"
        />
    <Button
        android:id="@+id/btn_importantReferences"
        style="@style/Button"
        android:text="@string/important_references"
        android:textColor="#fff"
        android:textSize="@dimen/_10sdp"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_Friday"

        android:layout_marginTop="@dimen/_10sdp"
        />
    <Button
        android:id="@+id/btn_addReminder"
        style="@style/Button"
        android:text="@string/add_reminder"
        android:textColor="#fff"
        android:textSize="@dimen/_10sdp"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_importantReferences"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        />
    <Button
        android:id="@+id/btn_setting"
        style="@style/Button"
        android:text="@string/settings"
        android:textColor="#fff"
        android:textSize="@dimen/_10sdp"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_addReminder"
        android:layout_marginBottom="@dimen/_10sdp"
        />

</RelativeLayout>
</ScrollView>